# money-plant

./: README.md  config.conf  connector.py  gui.py  gui_events.py  hardware_interface.py  main.py  pyproject.toml  ws.py
python/: bin.py  config.py  hotspot.py
website/: money-plant.py
website/static/css/: Bin_style.css  Invalid_user_style.css  Login_style.css  Smart_bin_style.css  Waste_details_style.css
website/templates/: Bin.html  Cart.html  Home.html  Invalid_pwd.html  Invalid_user.html  Login.html  Smart_bin.html  Waste_details.html
