[tool.poetry]
name = "moneyplant"
version = "0.1.0"
description = "Bin Controller Software"
authors = ["Christo <christotantony2003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
websockets = "^10.3"
qrcode = "^7.3.1"
requests = "^2.28.1"
Pillow = "^9.2.0"
tensorflow = {path = "ML/tensorflow-2.8.0-cp39-none-linux_aarch64.whl"}
protobuf = "3.20,*"
opencv-python = "^4.6.0"
"RPi.GPIO" = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
